agregado de sass

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <footer class="d-flex justify-content-between align-items-center flex-column flex-lg-row gap-3 pt-3 pb-3">
       <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
-          <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
+          <img src="./assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
           <h3>LA DORADA</h3>
       </a>
       <section class="geo-mail d-flex flex-wrap justify-content-center gap-2">
