--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -59,7 +59,7 @@
       <section class="padding-section text text-white">
           <h2 class="display-5 titulo-parrafo">¡Descansá en un hotel súper equipado y moderno!</h2>
           <p class="fs-4 mb-lg-5 titulo-parrafo">Nuestro hotel cuenta con las más confortables habitaciones para lograr un descanso óptimo y necesario para disfrutar de unas vacaciones únicas.</p>
-          <ul class="col-12 col-md-6 item__gastronomia">
+          <ul class="col-12 col-md-6 item__paralax">
             <li class="fs-4">Amplias y luminosas habitaciones, con elegante diseño de interiores y textiles de alta calidad.</li>
             <li class="fs-4">Atención al cliente personalizada. Siempre a tu disposición</li>
             <li class="fs-4">Acceso al área wellness, gym, y masajes.</li>
@@ -70,7 +70,7 @@
       <section class="padding-section imagen" style="background-image: url(../assets/habitacion-3.jpg)"></section>
       <section class="padding-section text text-white d-flex flex-column align-items-center">
           <h2 class="display-5 mb-lg-5 titulo-parrafo">Estamos poreparados para ofrecerte una estadía ideal, en el corazón del Norte Cordobés.</h2>
-            <ul class="col-12 col-md-6 item__gastronomia">
+            <ul class="col-12 col-md-6 item__paralax">
               <li class="fs-4">
                 Para alojarte en nuestro Hotel Boutique la reserva mínima es de <i>dos noches</i>, exceptuando fechas especiales en el año.
               </li>
