--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -54,6 +54,7 @@
             </div>
         </nav>
     </header>
+    
     <main id="main-gastronomia">
       <section class="padding-section imagen" style="background-image: url(../assets/gastronomia-1.jpg)" ></section>
       <section class="padding-section text text-white">
@@ -68,7 +69,7 @@
       <section class="padding-section text text-white d-flex flex-column align-items-center">
           <h2 class="display-5 titulo-parrafo">¡Conocé los servicios que te ofrecemos!</h2>
           <p class="fs-4 titulo-parrafo">Pensión completa gourmet bajo el servicio de todo incluído:</p>
-            <ul class="item__gastronomia">
+            <ul class="item__paralax">
               <li class="fs-4">Desayuno americano, Almuerzo, Merienda, Cena.
               </li>
               <li class="fs-4">Bebidas incluidas: gaseosa en almuerzo y cena. 
