agregado de comentarios

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,34 +58,47 @@
         </nav>
     </header>
     <main id="main__contacto" class="container d-flex flex-column align-items-center">
-      <h1>Contáctanos y Vivi una Experiencia Inolvidable en La Dorada</h1>
-      <iframe class="col-11 mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13810.83290497422!2d-63.824102!3d-30.0738969!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf9efc448657c37d!2sLa%20Dorada%20Estancia!5e0!3m2!1ses-419!2sar!4v1677959348191!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <!-- titulo principal -->
+      <h1 data-aos="fade-up" data-aos-duration="2000">Contáctanos y Vivi una Experiencia Inolvidable en La Dorada</h1>
+      <!-- mapa -->
+      <iframe class="col-11 mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13810.83290497422!2d-63.824102!3d-30.0738969!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf9efc448657c37d!2sLa%20Dorada%20Estancia!5e0!3m2!1ses-419!2sar!4v1677959348191!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" data-aos="fade-up" data-aos-duration="2000"></iframe>
+      
       <section class="container">
         <div class="row d-flex align-items-center">
+          <!-- card telefono -->
           <article class="col-lg-4 my-lg-5 text-center my-4">
+            <div class="mx-5 pb-3">
               <i class="bi bi-telephone-fill icon__contacto"></i>
               <h5>TELÉFONO</h5>
               <small><a href="tel:3522454258">(+549) 3522454258</a></small>
+            </div>
           </article>
+          <!-- card email -->
           <article class="col-lg-4 my-lg-5 text-center my-4">
+            <div class="pb-3">
               <i class="bi bi-envelope-fill icon__contacto"></i>
               <h5>EMAIL</h5>
               <small><a href="mailto:ladorada.hotelboutique@gmail.com">ladorada.hotelboutique@gmail.com</a></small>
+            </div>
           </article>
+          <!-- card redes -->
           <article class="col-lg-4 my-lg-5 text-center my-4">
-            <a href="https://www.instagram.com/ladorada_estancia" target="_blank">
-              <i class="bi bi-instagram redes__contacto"></i>
-            </a>
-            <a href="https://www.facebook.com/ladorada.hotelboutique" target="_blank">
-              <i class="bi bi-facebook redes__contacto"></i>
-            </a>
-            <a href="http://wa.me/+5493522454258" target="_blank">
-              <i class="bi bi-whatsapp redes__contacto"></i>   
-            </a>
-            <h5>Nuestras Redes</h5>
+            <div class="py-3">
+              <a href="https://www.instagram.com/ladorada_estancia" target="_blank">
+                <i class="bi bi-instagram redes__contacto"></i>
+              </a>
+              <a href="https://www.facebook.com/ladorada.hotelboutique" target="_blank">
+                <i class="bi bi-facebook redes__contacto"></i>
+              </a>
+              <a href="http://wa.me/+5493522454258" target="_blank">
+                <i class="bi bi-whatsapp redes__contacto"></i>   
+              </a>
+              <h5>Nuestras Redes</h5>
+            </div>
           </article>
         </div>
       </section>
+      <!-- formulario comentarios -->
       <form class="container shadow mb-5 mt-3">
           <h3 class="text-center py-4">DEJANOS TU COMENTARIO</h3>
           <section class="form-floating mb-3">
