--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -60,9 +60,13 @@
     </header>
     
     <main id="main__gastronomia">
+      <!-- background imag -->
       <section class="imagen" style="background-image: url(../assets/gastronomia-1.jpg)" ></section>
+
       <section class="padding-section text text-white">
-        <div class="degradado1"></div>
+        <!-- efecto degradado -->
+          <div class="degradado1"></div>
+          <!-- titulo principal y texto -->
           <h1 class="display-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">¡Los más deliciosos platos cordobeses!</h1>
           <p class=" fs-4 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">En nuestro hotel, no solo encontrarás un restaurante excepcional, sino también una experiencia culinaria de primer nivel. 
             Nuestros talentosos profesionales culinarios se dedican a crear platos exquisitos que te permitirán descubrir nuevos sabores y
@@ -70,7 +74,9 @@
              de vinos y bebidas cuidadosamente elegidas, que realzarán aún más el sabor de nuestras delicias culinarias. ¡Ven y déjate sorprender por 
              la combinación perfecta de sabores y tragos finos en nuestro hotel!</p>
       </section>
+
       <section class="imagen" style="background-image: url(../assets/gastronomia-2.jpg)"></section>
+
       <section class="padding-section text text-white d-flex flex-column align-items-center">
           <div class="degradado2"></div>
           <h2 class="col-11 display-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">¡Conocé los servicios que te ofrecemos!</h2>
