--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -58,11 +58,13 @@
               </article>
             </section>
         </nav>
+        <!-- imagen principal -->
         <section class="img__nosotros">
           <img src="../assets/hero-image-nosotros.jpg" alt="Foto de Nuestro Equipo completo">
         </section>
     </header>
     <main id="main__nosotros">
+      <!-- titulo y texto introductorio -->
       <section class="intro d-flex flex-column align-items-center">
         <h1 class="titulo__principal" data-aos="fade-up" data-aos-duration="2000">La Pasión por la Hospitalidad en La Dorada</h1>
         <p class="intro__parrafo container-lg text-white" data-aos="fade-up" data-aos-duration="2000">
@@ -70,15 +72,17 @@
           cada miembro aporta habilidades únicas y experiencia en la industria hotelera. Desde nuestro amable personal de recepción hasta nuestros talentosos chefs
            y atentos miembros del personal de limpieza, todos trabajamos en armonía para brindarte una experiencia inolvidable. Con un enfoque en la atención al detalle y la satisfacción del cliente, estamos aquí para asegurarnos de que tu estancia sea excepcional en todos los aspectos. Bienvenido a nuestro equipo, donde la hospitalidad cobra vida</p>
       </section>
+
       <div class="container">
        <section class="row d-flex justify-content-evenly">
 
           <article class="integrantes position-relative d-flex flex-column align-items-center col-11 col-lg-5 p-0 my-3" data-aos="fade-up" data-aos-duration="2000">
+            <!-- imagen card -->
             <img class="rounded" src="../assets/nosotros-1.jpg" alt="">
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
-                <small class="fs-4 text-white pb-5">Nombre</small>
+                <small class="fs-4 text-white pb-5">Dora</small>
               </div>
             </aside>
           </article>
@@ -88,7 +92,7 @@
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
-                <small class="fs-4 text-white pb-5">Nombre</small>
+                <small class="fs-4 text-white pb-5">Donatto</small>
               </div>
             </aside>
           </article>
@@ -98,7 +102,7 @@
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
-                <small class="fs-4 text-white pb-5">Nombre</small>
+                <small class="fs-4 text-white pb-5">Damian</small>
               </div>
             </aside>
           </article>
@@ -108,7 +112,7 @@
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
-                <small class="fs-4 text-white pb-5">Nombre</small>
+                <small class="fs-4 text-white pb-5">Luci, Amadeo y Manu</small>
               </div>
             </aside>
           </article>
@@ -118,7 +122,7 @@
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
-                <small class="fs-4 text-white pb-5 ">Nombre</small>
+                <small class="fs-4 text-white pb-5 ">Juan y Pato</small>
               </div>
             </aside>
           </article>
