--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -78,7 +78,7 @@
 
           <article class="integrantes position-relative d-flex flex-column align-items-center col-11 col-lg-5 p-0 my-3" data-aos="fade-up" data-aos-duration="2000">
             <!-- imagen card -->
-            <img class="rounded" src="../assets/nosotros-1.jpg" alt="">
+            <img class="rounded" src="../assets/nosotros-1.jpg" alt="Nuestra anfitriona la perrita Dora">
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
@@ -88,7 +88,7 @@
           </article>
 
           <article class="integrantes position-relative d-flex flex-column align-items-center col-11 col-lg-5 p-0 my-3" data-aos="fade-up" data-aos-duration="2000">
-            <img class="rounded" src="../assets/nosotros-3.jpg" alt="">
+            <img class="rounded" src="../assets/nosotros-3.jpg" alt="Nuestro cheff Donnato">
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
@@ -98,7 +98,7 @@
           </article>
 
           <article class="integrantes position-relative d-flex flex-column align-items-center col-11 col-lg-5 p-0 my-3" data-aos="fade-up" data-aos-duration="2000">
-            <img class="rounded" src="../assets/nosotros-4.jpg" alt="">
+            <img class="rounded" src="../assets/nosotros-4.jpg" alt="Damian El ayudante de cocina">
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
@@ -108,7 +108,7 @@
           </article>
             
           <article class="integrantes position-relative d-flex flex-column align-items-center col-11 col-lg-5 p-0 my-3" data-aos="fade-up" data-aos-duration="2000">
-            <img class="rounded" src="../assets/nosotros-2.jpg" alt="">
+            <img class="rounded" src="../assets/nosotros-2.jpg" alt="Nuestro mozos y staff Luci,Amadeo y Manu">
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
@@ -118,7 +118,7 @@
           </article>
 
           <article class="integrantes position-relative d-flex flex-column align-items-center col-11 col-lg-5 p-0 my-3" data-aos="fade-up" data-aos-duration="2000">
-            <img class="rounded" src="../assets/nosotros-5.jpg" alt="">
+            <img class="rounded" src="../assets/nosotros-5.jpg" alt="La pareja emprendedora de la dorada, Pato y Juan">
             <!-- animacion hover en la card -->
             <aside class="descripcion text-center">
               <div class="d-flex flex-column justify-content-end">
